<resources>
    <!--credenciales de aplicativo-->
    <string name="app_name">Gestion501</string>
    <string name="developer">adan chambi</string>
    <string name="desarrollo">desarrollado por:</string>
    <string name="version">Version 1.0.0</string>

    <string name="descripcion_dev">
        Desarrollador de software enfocado en la creación de soluciones móviles nativas e integraciones backend.
        Mi formación técnica abarca desde la programación orientada a objetos en Java hasta un interés profundo
        por la Ciencia de Datos y el Machine Learning. Disfruto construyendo desde interfaces de usuario fluidas
        hasta explorando algoritmos de visión computacional y análisis predictivo
    </string>
    <string name="telefono">92478373848</string>

    <!--botones globales-->
    <string name="listar">Listar</string>
    <string name="guardara">Guardar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="buscar">Buscar...</string>
    <string name="volver">Volver</string>


    <!--login-->
    <string name="Titulo_login">Ingresar Sesion</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="txt_usuario">Ingrase Usuario</string>
    <string name="lbl_password">Contraseña</string>
    <string name="txt_password">Ingrasar Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="lbl_crear_cuenta">No tienes cuenta ?, Registrate</string>
    <!--registro-->
    <string name="titulo_registro">Crear cuenta</string>

    <string name="lbl_nombre_usuario">Nombre</string>
    <string name="txt_nombre_usuario">Ingresar Nombre de Usuario</string>

    <string name="lbl_apellido_usuario">Apellido</string>
    <string name="txt_apellido_usuario">Ingresar Apellido</string>

    <string name="lbl_email_usuario">Correo Electronico</string>
    <string name="txt_email_usuario">Ingresar Correo Electronico</string>

    <string name="lbl_nueva_password">Contraseña</string>
    <string name="txt_nueva_password">Ingresar Contraseña</string>
    <string name="lbl_confirmar_password">Confirmar Contraseña</string>
    <string name="txt_confirmar_password">Repita la Contraseña</string>

    <string name="btn_registrar">Registrar</string>
    <string name="lbl_tienes_cuenta">Ya tienes cuenta? Inicia Sesion</string>

    <!--Dahs board-->
    <string name="bienvenido">Bienvenido</string>
    <string name="cliente">Cliente</string>
    <string name="gastos">Gastos</string>
    <string name="lista_tareas">Lista de Tareas</string>
    <string name="tareas">Tareas</string>
    <string name="favoritos">Favoritos</string>
    <string name="mis_datos">Mis Datos</string>
    <string name="cerrar_sesión">Cerrar Sesión</string>


    <!-- Mis datos -->
    <string name="correo_md">Correo Usuario</string>
    <string name="codigo_md">Codigo Usuario</string>
    <string name="titulo_md">Datos Personales</string>
    <string name="datos_md">Datos...</string>
    <string name="leyenda_md">Todos los campos son requeridos: </string>
    <string name="nombre_md">Nombres</string>
    <string name="apellido_md">Apellidos</string>
    <string name="fecha_nacimiento_md">Fecha de Nacimiento</string>
    <string name="edad_md">Edad</string>
    <string name="telefono_md">Telefono</string>
    <string name="domicilio_md">Domicilio</string>
    <string name="tiktok_md">TikTok</string>
    <string name="profesion_md">Profesion</string>

    <!--ITEM CLIENTE-->
    <string name="id_cliente_item">Id Cliente</string>
    <string name="uid_cliente">Uid Cliente</string>
    <string name="nombre_cliente_item">Nombre</string>
    <string name="apellido_cliente_item">Apellidos</string>
    <string name="correo_cliente_item">Correo</string>
    <string name="dni_cliente_item">Dni</string>
    <string name="telefono_cliente_item">Telefono</string>
    <string name="direccion_cliente_Item">Direccion</string>
    <!--agregar cliente-->
    <string name="registrar_cli">Registrar Cliente</string>
    <string name="uid_usuario">Mi UID</string>
    <string name="nombre_cli">Nombres Clientes</string>
    <string name="apellidos_cli">Apellidos_Clientes</string>
    <string name="correo_cli">Correo</string>
    <string name="dni_cli">DNI</string>
    <string name="telefon_cli">Telefono</string>
    <string name="direccion_cli">Direccion</string>
    <!--CUADROS DE DIALOGO-->
    <string name="titulo_val_cli">Aviso del Aplicativo</string>
    <string name="desc_val_cli">Debe de ingresar como minimo el Nombre del Cliente. Gracias!</string>
    <string name="btn_entendido_cli">Entendido</string>

</resources>