<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_db2"
    tools:context=".RegistroUActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblCrarCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_registro"
            android:textSize="23sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white">

        </TextView>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:srcCompat="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nombre_usuario"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/white">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="#FFFFFF"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/txt_nombre_usuario" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_apellido_usuario"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/white">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RApellidoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="#FFFFFF"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:inputType="text"
                android:hint="@string/txt_apellido_usuario" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_email_usuario"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/white">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/REmailUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="#FFFFFF"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_email_usuario"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nueva_password"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/white">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RNuevaPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="#FFFFFF"
            app:boxStrokeWidth="0dp"
            app:passwordToggleEnabled="true"
            app:boxStrokeWidthFocused="0dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:inputType="textPassword"
                android:hint="@string/txt_nueva_password" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_confirmar_password"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/white">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RConfirmarPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="#FFFFFF"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/txt_confirmar_password" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:text="@string/btn_registrar">

        </Button>

        <TextView
            android:id="@+id/lblVolverLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_tienes_cuenta"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:paddingStart="45dp">

        </TextView>




    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>